--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
       <input type="number" min="0" id="t-amount" placeholder="Amount" />
 
       <div class="transaction-buttons">
-        <button id="add-btn"><i class="fa fa-plus"></i> Add Funds</button>
+        <button id="add-btn">
+          <i class="fa fa-plus"></i> Add Funds</button>
         <button id="sub-btn">
           <i class="fa fa-minus"></i> Subtract Funds
         </button>
